# C-toRUST-Assistant

./: Cargo.toml  README.md  output.rs
src/: cargo_check.rs  converter.rs  extractor.rs  index.html  llm.rs  main.rs  result.html  style.css
src/web/: handler.rs  mod.rs  routes.rs
